# flutter_litert_flex

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/hugocornellier/flutter_litert_flex/: FlutterLitertFlexPlugin.kt
android/src/test/kotlin/com/hugocornellier/flutter_litert_flex/: FlutterLitertFlexPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/hugocornellier/flutter_litert_flex_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_litert_flex.podspec
ios/Classes/: FlutterLitertFlexPlugin.swift  force_load_flex.m
ios/flutter_litert_flex/: Package.swift
lib/: flutter_litert_flex.dart  flutter_litert_flex_method_channel.dart  flutter_litert_flex_platform_interface.dart
linux/: CMakeLists.txt  flutter_litert_flex_plugin.cc  flutter_litert_flex_plugin_private.h
linux/include/flutter_litert_flex/: flutter_litert_flex_plugin.h
linux/test/: flutter_litert_flex_plugin_test.cc
macos/: flutter_litert_flex.podspec
macos/Classes/: FlutterLitertFlexPlugin.swift
macos/flutter_litert_flex/: Package.swift
macos/flutter_litert_flex/Sources/flutter_litert_flex/: FlutterLitertFlexPlugin.swift
scripts/: preprocess_flex_xcframework.sh
test/: flutter_litert_flex_method_channel_test.dart  flutter_litert_flex_test.dart
windows/: CMakeLists.txt  flutter_litert_flex_plugin.cpp  flutter_litert_flex_plugin.h  flutter_litert_flex_plugin_c_api.cpp
windows/include/flutter_litert_flex/: flutter_litert_flex_plugin_c_api.h
windows/test/: flutter_litert_flex_plugin_test.cpp
